--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Nuklear"]
 	path = Nuklear
 	url = https://github.com/Immediate-Mode-UI/Nuklear.git
+[submodule "nuklear_cross"]
+	path = nuklear_cross
+	url = https://github.com/DeXP/nuklear_cross
